--- a/packages/produtor/styles/Home.module.css
+++ b/packages/produtor/styles/Home.module.css
@@ -1,48 +1,3 @@
-<template>
-  <div class="container">
-    <main class="main">
-      <pre>PROJECT: PRODUTOR</pre>
-
-      <h1 v-if="pokemonInfo" class="title">
-        Welcome to <a href="https://v3.nuxtjs.org/">Nuxt.js</a>, <strong>{{ pokemonInfo.name }}</strong> !!!
-      </h1>
-    </main>
-  </div>
-</template>
-
-<script>
-import axiosPublic from "@monorepo/axios-config";
-
-export default {
-  name: 'InitialPage',
-  data: () => ({
-    pokemonInfo: null,
-  }),
-  async mounted() {
-    const { data } = await axiosPublic.get('https://pokeapi.co/api/v2/pokemon/pikachu')
-    this.pokemonInfo = data
-  }
-}
-</script>
-
-<style lang="scss">
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
 .container {
   padding: 0 2rem;
 }
@@ -74,7 +29,7 @@ a {
 }
 
 .title a {
-  color: #00dc82;
+  color: #0070f3;
   text-decoration: none;
 }
 
@@ -107,7 +62,7 @@ a {
   padding: 0.75rem;
   font-size: 1.1rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-  Bitstream Vera Sans Mono, Courier New, monospace;
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
@@ -159,5 +114,3 @@ a {
     flex-direction: column;
   }
 }
-
-</style>
